Finished configuration for the most part

--- a/package.json
+++ b/package.json
@@ -13,28 +13,23 @@
         "displayName": "Time Gear",
         "enableMultiJS": true,
         "messageKeys": [
+            "CfgBackground[3]",
+            "CfgBackgroundCycleInterval",
+            "CfgApiKey",
+            "CfgShowTemperature",
+            "CfgTemperatureUnit",
+            "CfgShowDate",
+            "CfgDateFormat",
+            "CfgShowSteps",
+            "CfgStepGoal",
+            "CfgBottomDisplay",
+            "CfgQuickView",
             "Temperature",
             "WeatherDescription"
         ],
         "projectType": "native",
         "resources": {
             "media": [
-                {
-                    "file": "images/test1.png",
-                    "name": "IMAGE_TEST_1",
-                    "targetPlatforms": null,
-                    "type": "bitmap"
-                },
-                {
-                    "file": "images/font2.png",
-                    "name": "IMAGE_SHEET_HUD",
-                    "targetPlatforms": [
-                        "basalt",
-                        "chalk",
-                        "diorite"
-                    ],
-                    "type": "bitmap"
-                },
                 {
                     "file": "images/timegear_main.png",
                     "name": "IMAGE_TIMEGEAR",
@@ -49,6 +44,12 @@
                 {
                     "file": "images/timegear_chrg",
                     "name": "IMAGE_TIMEGEAR_CHARGING",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
+                    "file": "images/test1.png",
+                    "name": "IMAGE_TEST_1",
                     "targetPlatforms": null,
                     "type": "bitmap"
                 },
@@ -142,6 +143,16 @@
                     "file": "images/no-bluetooth.png",
                     "name": "IMAGE_NO_BLUETOOTH",
                     "storageFormat": "png",
+                    "targetPlatforms": [
+                        "basalt",
+                        "chalk",
+                        "diorite"
+                    ],
+                    "type": "bitmap"
+                },
+                {
+                    "file": "images/font2.png",
+                    "name": "IMAGE_SHEET_HUD",
                     "targetPlatforms": [
                         "basalt",
                         "chalk",
@@ -333,9 +344,9 @@
                     "type": "bitmap"
                 },
                 {
-                    "characterRegex": "[0-9a-zA-Z,.-;:_()?!'\u00f6\u00fc\u00e4\u00df\u00e9\u00e1\u00ed ]",
+                    "characterRegex": "[0-9: ]",
                     "file": "fonts/PMD_1.1.ttf",
-                    "name": "FONT_PMD_11",
+                    "name": "FONT_PMD_21",
                     "targetPlatforms": [
                         "basalt",
                         "chalk",
@@ -344,9 +355,9 @@
                     "type": "font"
                 },
                 {
-                    "characterRegex": "[0-9: ]",
+                    "characterRegex": "[0-9a-zA-Z,.-;:_()?!'\u00f6\u00fc\u00e4\u00df\u00e9\u00e1\u00ed ]",
                     "file": "fonts/PMD_1.1.ttf",
-                    "name": "FONT_PMD_21",
+                    "name": "FONT_PMD_11",
                     "targetPlatforms": [
                         "basalt",
                         "chalk",
