Update name and URLs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "author": "Parakoopa",
+    "author": "Marco 'Capypara' Köpcke",
     "dependencies": {
         "pebble-clay": "^1.0.4"
     },
